--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,13 +2,14 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/master/containers/docker-existing-dockerfile
 {
 	"name": "Doozer dev container",
-
 	"dockerComposeFile": [
 		"./docker-compose.yaml"
 	],
 	"service": "doozer",
 	"workspaceFolder": "/workspaces/art-tools",
-
+	"containerEnv": {
+		"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION": "python"
+	},
 	// Use 'settings' to set *default* container specific settings.json values on container create.
 	// You can edit these settings after create using File > Preferences > Settings > Remote.
 	"customizations": {
@@ -24,26 +25,30 @@
 				"python.testing.unittestArgs": [
 					"-v",
 					"-s",
-					"./tests",
+					"/workspaces/art-tools/doozer/tests",
 					"-p",
-					"test_*.py"
+					"test_*.py",
+					"--top-level-directory",
+					"/workspaces/art-tools/doozer"
 				],
 				"python.testing.pytestEnabled": false,
 				"python.testing.nosetestsEnabled": false,
-				"python.testing.unittestEnabled": true
+				"python.testing.unittestEnabled": true,
+				"python.testing.cwd": "/workspaces/art-tools"
 			},
-
 			// Add the IDs of extensions you want installed when the container is created in the array below.
 			"extensions": [
+				"usernamehw.errorlens",
 				"ms-python.python",
-				"eamodio.gitlens"
+				"github.copilot",
+				"github.copilot-chat",
+				"github.vscode-pull-request-github",
+				"maattdd.gitless"
 			]
 		}
 	},
-
 	// Uncomment the next line if you want to publish any ports.
 	// "appPort": [],
-
 	// Uncomment the next line to run commands after the container is created - for example installing git.
 	"postCreateCommand": "sudo chown -R dev: /workspaces/doozer-working-dir"
 }
