--- a/pyartcd/requirements.txt
+++ b/pyartcd/requirements.txt
@@ -4,6 +4,7 @@ aiohttp[speedups] >= 3.6
 aiohttp_retry
 aioredlock >= 0.7.3
 click == 8.1.8
+awscli >= 1.37.0
 contextvars
 errata-tool ~= 1.31.0
 cryptography
